--- a/interfaces/acados_template/acados_template/c_templates_tera/Makefile.in
+++ b/interfaces/acados_template/acados_template/c_templates_tera/Makefile.in
@@ -268,6 +268,7 @@ EXTERNAL_DIR+= {{ model_external_shared_lib_dir  }}
 EXTERNAL_LIB+= {{ model_external_shared_lib_name }}
 {%- endif %}
 
+CC = {{ system_c_compiler }}
 INCLUDE_PATH = {{ acados_include_path }}
 LIB_PATH = {{ acados_lib_path }}
 
@@ -282,9 +283,10 @@ CPPFLAGS += -DACADOS_WITH_OSQP
 CPPFLAGS += -DACADOS_WITH_QPDUNES
 {%- endif %}
 CPPFLAGS+= -I$(INCLUDE_PATH)
-CPPFLAGS+= -I$(INCLUDE_PATH)/acados
-CPPFLAGS+= -I$(INCLUDE_PATH)/blasfeo/include
-CPPFLAGS+= -I$(INCLUDE_PATH)/hpipm/include
+CPPFLAGS+= -I$(INCLUDE_PATH)/interfaces
+CPPFLAGS+= -I$(INCLUDE_PATH)/external
+CPPFLAGS+= -I$(INCLUDE_PATH)/external/blasfeo/include
+CPPFLAGS+= -I$(INCLUDE_PATH)/external/hpipm/include
  {%- if qp_solver == "FULL_CONDENSING_QPOASES" %}
 CPPFLAGS+= -I $(INCLUDE_PATH)/qpOASES_e/
  {%- endif %}
